<resources>
    <string name="app_name">CarRentalApp</string>
    <string name="cra">Car Rental App</string>
    <string name="select_car">Select Car :</string>
    <string name="daily_rate">Daily Rate :</string>
    <string name="rate">0.0</string>
    <string name="age">Age :</string>
    <string name="_21"><![CDATA[<=21]]></string>
    <string name="_22_64">22 - 64</string>
    <string name="_65">65+</string>
    <string name="insurance_amount">Insurance Amount :</string>
    <string name="select">Select :</string>
    <string name="navigator">Navigator</string>
    <string name="child_seat">Child Seat</string>
    <string name="unlimited">Unlimited</string>
    <string name="order">Order</string>
    <string name="total">Total :</string>
    <string name="status">Status :</string>
    <string name="available">Available</string>
    <string name="select_days">Select Days :</string>
</resources>