<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg"
   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    >

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cra"
        android:textColorHint="#10877B"
        android:textColor="#10877B"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
    <TextView
        android:id="@+id/carlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_car"
        android:textColorHint="#000000"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        />
        <Spinner
            android:id="@+id/carlist"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/carimg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="5dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/ratelable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_rate"
            android:textColorHint="#000000"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/dailyrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColorHint="#000000"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColorHint="#000000"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColorHint="#000000"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rdbSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/_21"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rdbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_22_64"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rdbLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_65"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/inslab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insurance_amount"
            android:textColorHint="#000000"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/insurance_amt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
    <TextView
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textColorHint="#000000"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <CheckBox
        android:id="@+id/chb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigator"
        android:textColor="@color/black"
        android:textStyle="bold"
      />
    <CheckBox
        android:id="@+id/chb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_seat"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <CheckBox
        android:id="@+id/chb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlimited"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_days"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            />

    <SeekBar
        android:id="@+id/noofdays"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="200dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_height="20dp"
        android:max="30"
        android:min="1"
        android:textColor="@color/black"
        android:progress="1"
        />
        <TextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/btnOrder"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#10877B"
        android:text="@string/order"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/tot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColorHint="#000000"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>